# crewai_news_agents

./: README.md  pyproject.toml  report.md
src/news_agent/: crew.py  main.py
